# airflow-property-price-analytics-pipeline

./: .gitignore  .python-version  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setup  setup.cfg  setup.py
dags/: config.ini  config.yaml  constants.py  local_test.py  main.py  zoopla_dag.py
dags/resources/: __init__.py  redshift.py  s3.py  spark.py
dags/scraper/: data_model.py  zoopla_scraper.py
dags/util/: const.py  parser.py
data/: output.json
k8s/: k8s_minikube.yaml  minio_values.yaml
notebook/: Analysis.ipynb
notebook/iframe_figures/: figure_87.html  figure_88.html  figure_99.html
property/: __init__.py  assets.py  config.yaml  constants.py  jobs.py
property/resources/: __init__.py  deltalake_manager.py
property/scraper/: zoopla_scraper.py
resources/: __init__.py  spark.py
src/: data_struct.py  export_s3.py  zoopla_scraper.py
util/: browser_support.py  const.py  parser.py
