[tool.poetry]
name = "house-price"
version = "0.1.0"
description = "House price scraper"
authors = ["Joon Kang <denim.bluu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
pytest-playwright = "^0.4.4"
playwright = "^1.41.2"
pydantic = "^2.6.2"
pyspark = "^3.5.0"
boto3 = "^1.34.49"
delta-spark = "^3.1.0"
dagster = "^1.6.6"
dagster-webserver = "^1.6.6"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"
ptpython = "^3.0.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
