[tool.poetry]
name = "house-price"
version = "0.1.0"
description = "House price scraper"
authors = ["Joon Kang <denim.bluu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
bs4 = "^0.0.2"
pydantic = "^2.6.3"
pyspark = "^3.5.1"
boto3 = "^1.34.55"
delta-spark = "^3.1.0"
pandas = "^2.2.1"
pendulum = "^3.0.0"
apache-airflow = "^2.8.2"
python-dotenv = "^1.0.1"
apache-airflow-providers-amazon = "^8.18.0"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
pyarrow = "^15.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"
ptpython = "^3.0.26"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"