[tool.poetry]
name = "house-price"
version = "0.1.0"
description = "House price scraper"
authors = ["Joon Kang <denim.bluu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
bs4 = "^0.0.2"
pydantic = "^2.6.3"
boto3 = "^1.34.55"
pandas = "^2.2.1"
pendulum = "^3.0.0"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
polars = "^0.20.15"
dagster = "^1.6.13"
dagster-webserver = "^1.6.13"
dagster-aws = "^0.22.13"
pyarrow = "^15.0.2"
deltalake = "^0.16.2"
psycopg2-binary = "^2.9.9"
jupyter = "^1.0.0"
minio = "^7.2.5"
plotly = "^5.20.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"
ptpython = "^3.0.26"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "property"
